# fileplotter

./: .pre-commit-config.yaml  LICENSE  README.md  fileplotter.py  fplot.py  pyproject.toml
fileplotter/: csv.py  data.py  file_utils.py
tests/: test_csv.py  test_data.py  test_file_utils.py
tests/testdata/: a.csv
